--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         >
 
         <activity
-            android:name=".Splash"
-            android:label="@string/app_name" >
+            android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -21,7 +20,6 @@
         </activity>
         <activity
             android:name=".P000Menu"
-            android:label="@string/app_name"
             android:theme="@style/BabyBlue.BigBlue">
         </activity>
 
@@ -85,7 +83,6 @@
         <activity android:name=".P017DrawableIcon"></activity>
 
         <activity android:name=".P018CanvasGball"></activity>
-        <activity android:name=".P018BCanvas"></activity>
 
         <activity android:name=".P019WebView"></activity>
 
