--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.kkldfkld.myapplication"
+        applicationId "com.example.kkldfkld.androidtutorial"
         minSdkVersion 12
         targetSdkVersion 22
         versionCode 1
